# Cleo

./: .gitignore  .gitmodules  AppleDetector.cpp  AppleDetector.h  CMakeLists.txt  Fan.txt  README.MD  apple_aruco_pose.cpp  apple_aruco_pose.hpp  aruco.cpp  aruco.hpp  aruco_pose.cpp  aruco_pose.h  aruco_pose.hpp  balls.cpp  balls.hpp  main.cpp  mission_appleTree_find_orange_apple  parking_box.txt  takephoto.cpp  takevideo.cpp  tcpCase.h  types.h  uaruco.cpp  ubridge.cpp  ubridge.h  ucamera.cpp  ucamera.h  ucamera_v4l2.cpp  ucamera_v4l2.h  ulib2dline.cpp  ulibpose.cpp  umission copy.cpp  umission copy.h  umission.cpp  umission.cpp.save  umission.h  umotor.cpp
Navigation/: fan_part.txt  first_task.txt  gate_parking.txt  gates_of_hell.txt  seesaw.txt
aruco/: CMakeLists.txt  aruco.cpp  aruco.hpp  aruco_live.cpp  calibrate_camera.cpp  create_aruco.cpp  create_aruco.hpp  single_picture.cpp
fromOtherRobot/mission-golfball/: CMakeLists.txt  ubridge.cpp  ubridge.h  uedge.cpp  uevent.cpp  ujoy.cpp  ulibpose2pose.h  uline.cpp  umission.cpp  umission.h  utime.cpp
fromOtherRobot/mission_axe/: CMakeLists.txt  tcpCase.cpp  ucamera.h  umission.cpp  umission.h
fromOtherRobot/mission_seesaw/: CMakeLists.txt  tcpCase.h  ucamera.cpp  umission.cpp  umission.h  uplay.h  urun.h
fromOtherRobot/mission_seesaw/aruco/Opencv_tests/: CMakeLists.txt
fromOtherRobot/mission_stairs/: CMakeLists.txt  uaruco.h  ubridge.cpp  ubridge.h  ulib2dline.h  ulibpose.h  ulibpose2pose.cpp  umission.cpp  umission.h  upose.cpp  urun.cpp  utime.h
fromOtherRobot/mission_start/: CMakeLists.txt  ulibposev.h  umission.cpp  umission.h
fromOtherRobot/mission_start/log/: log_ArUco_20191223_153658.719.txt
fromOtherRobot/mission_tunnel/: CMakeLists.txt  Doxyfile  main.cpp  uaccgyro.cpp  uaruco.cpp  uinfo.cpp  uirdist.cpp  ujoy.h  ulibposev.cpp  umission.cpp  umission.h
fromOtherRobot/mission_tunnel/aruco/Opencv_tests/: Opencv_test.cpp
libcam/: lccv.hpp
old_aruco/Opencv_tests/: Opencv_test
